--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,11 @@
 
 # Mono auto generated files
 mono_crash.*
+
 Migrations/
+ApplicationDBContextModelSnapshot.cs
+
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
