--- a/auth/auth.csproj
+++ b/auth/auth.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="System.Text.Json" Version="6.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Uploads\Avatar\" />
+  </ItemGroup>
+
 </Project>
