reset password, send email

--- a/auth/appsettings.json
+++ b/auth/appsettings.json
@@ -17,5 +17,12 @@
     "Issuser": "baseWebApiIssuser",
     "Audience": "baseWebApiaAudience",
     "subject": "baseWebApiSubject"
+  },
+  "Mail": {
+    "Host": "smtp.ethereal.email",
+    "Port": "587",
+    "DisplayName": "Flossie Hagenes",
+    "Email": "flossie.hagenes@ethereal.email",
+    "Password": "W1bf32k4CfunMChJaG"
   }
 }
